--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
@@ -13,8 +13,8 @@
     <ng-container ngProjectAs="sectionContent">
       <div>
         We use the 12-column grid in our design system. We have two versions of it, one for external use and
-        one for internal. They both are responsive and have same number of columns, but they have different
-        gutters and margins.
+        one for internal. They both are responsive and have the same number of columns, but they have
+        different gutters and margins.
       </div>
 
       <app-component-subsection [sectionTitle]="'External grid'">
