--- a/packages/web/src/app/doc-pages/other-pages/contribute/contribute.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contribute/contribute.component.html
@@ -12,8 +12,8 @@
   <app-component-subsection [sectionTitle]="'Feedback'">
     <ng-container ngProjectAs="sectionContent">
       Other than writing in our Slack channel you can use the "Give feedback" link, located in the top right
-      corner. This lik is on almost all our pages and is a quick and easy way to give us feedback. The
-      feedback will then be related to the page you where on when giving the feedback.
+      corner. This link is on almost all our pages and is a quick and easy way to give us feedback. The
+      feedback will then be related to the page you were on when giving the feedback.
     </ng-container>
   </app-component-subsection>
 </div>
