--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -7811,14 +7811,16 @@ input:focus {
 }
 .e-form-field.e-form-field--compact {
   position: relative;
+  padding-top: 8px;
 }
 .e-form-field.e-form-field--compact .e-form-field__label {
   position: absolute;
   z-index: 1;
-  top: -5px;
+  top: 0;
   left: 8px;
-  background: #fff;
+  background-color: #fff;
   padding: 0 3px;
+  height: 9px;
   font-family: "Red Hat Text", Verdana, sans-serif;
   font-weight: 500;
   font-size: 10px;
@@ -7832,6 +7834,10 @@ input:focus {
 }
 .e-form-field.e-form-field--compact input:disabled {
   color: #bdbdbd;
+}
+.e-form-field.e-form-field--compact:focus-within .e-form-field__label {
+  height: 10px;
+  border-bottom: 1px solid #fff;
 }
 .e-form-field.e-form-field--full-width .e-input, .e-form-field.e-form-field--full-width .e-input > input, .e-form-field.e-form-field--full-width .e-input > textarea, .e-form-field.e-form-field--full-width .e-input > div, .e-form-field.e-form-field--combined.e-form-field--full-width > .e-form-field__input {
   max-width: unset;
