restructure rectangle props, update documentation

--- a/packages/web/src/app/doc-pages/components/spotlight-doc/spotlight-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/spotlight-doc/spotlight-doc.component.html
@@ -46,6 +46,11 @@
           </div>
         </ng-container>
       </app-component-subsection>
+      <app-component-subsection [sectionTitle]="'Rectangle'">
+        <ng-container ngProjectAs="sectionContent">
+          For the rectangle shape, the position prop will correspond to the top left corner of the spotlight.
+        </ng-container>
+      </app-component-subsection>
     </ng-container>
   </app-component-section>
 
