rename "hasHelpValues" -> "hasHintValues"

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -324,7 +324,7 @@
       [max]="100"
       [isDisabled]="false"
       [hasInputField]="false"
-      [hasHelpValues]="true"
+      [hasHintValues]="true"
     ></elvia-slider>
     <h5>With the tooltip disabled</h5>
     <elvia-slider
@@ -349,7 +349,7 @@
       [max]="8000000"
       [isDisabled]="false"
       [hasInputField]="true"
-      [hasHelpValues]="true"
+      [hasHintValues]="true"
     ></elvia-slider>
     <h5>With input and custom unit in tooptip</h5>
     <elvia-slider
@@ -419,7 +419,7 @@
       [max]="100"
       [isDisabled]="false"
       [hasInputField]="false"
-      [hasHelpValues]="true"
+      [hasHintValues]="true"
     ></elvia-slider>
     <h5>With input</h5>
     <elvia-slider
@@ -435,7 +435,7 @@
       [max]="100"
       [isDisabled]="false"
       [hasInputField]="true"
-      [hasHelpValues]="true"
+      [hasHintValues]="true"
     ></elvia-slider>
     <h5>With input, and custom label</h5>
     <elvia-slider
