--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -33,33 +33,35 @@
   <!-- Badge -->
   <div class="example-wrapper">
     <h3>Badge</h3>
-    <elvia-badge [count]="0">
-      <button
-        class="e-thumbnail"
-        aria-label="Thumbnail button that opens the image in a larger view"
-        slot="content"
-      >
-        <img src="https://picsum.photos/56" alt="Thumbnail example image" />
-      </button>
-    </elvia-badge>
-    <elvia-badge [count]="10" [badgeColor]="'red'">
-      <button
-        class="e-thumbnail"
-        aria-label="Thumbnail button that opens the image in a larger view"
-        slot="content"
-      >
-        <img src="https://picsum.photos/56" alt="Thumbnail example image" />
-      </button>
-    </elvia-badge>
-    <elvia-badge [count]="101" [badgeColor]="'black'">
-      <button
-        class="e-thumbnail"
-        aria-label="Thumbnail button that opens the image in a larger view"
-        slot="content"
-      >
-        <img src="https://picsum.photos/56" alt="Thumbnail example image" />
-      </button>
-    </elvia-badge>
+    <div style="display: flex; gap: 1rem">
+      <elvia-badge [count]="0">
+        <button
+          class="e-thumbnail"
+          aria-label="Thumbnail button that opens the image in a larger view"
+          slot="content"
+        >
+          <img src="https://picsum.photos/56" alt="Thumbnail example image" />
+        </button>
+      </elvia-badge>
+      <elvia-badge [count]="10" [badgeColor]="'red'">
+        <button
+          class="e-thumbnail"
+          aria-label="Thumbnail button that opens the image in a larger view"
+          slot="content"
+        >
+          <img src="https://picsum.photos/56" alt="Thumbnail example image" />
+        </button>
+      </elvia-badge>
+      <elvia-badge [count]="101" [badgeColor]="'black'">
+        <button
+          class="e-thumbnail"
+          aria-label="Thumbnail button that opens the image in a larger view"
+          slot="content"
+        >
+          <img src="https://picsum.photos/56" alt="Thumbnail example image" />
+        </button>
+      </elvia-badge>
+    </div>
   </div>
 
   <!--Box-->
@@ -311,167 +313,76 @@
   <div class="example-wrapper">
     <h3>Slider</h3>
     <h4>Simple Slider</h4>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="false"
-    ></elvia-slider>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="false"
-      [hasHintValues]="true"
-    ></elvia-slider>
-    <h5>With the tooltip disabled</h5>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="false"
-      [hasTooltip]="false"
-    ></elvia-slider>
-    <h5>With input</h5>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="1"
-      [max]="8000000"
-      [isDisabled]="false"
-      [hasInputField]="true"
-    ></elvia-slider>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="1"
-      [max]="8000000"
-      [isDisabled]="false"
-      [hasInputField]="true"
-      [hasHintValues]="true"
-    ></elvia-slider>
-    <h5>With input and custom unit in tooptip</h5>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="true"
-      [unit]="' kr'"
-    ></elvia-slider>
-    <h5>With input, cutom label and custom unit in tooptip</h5>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="true"
-      [unit]="' kWh'"
-      [label]="'Kilowattime'"
-    ></elvia-slider>
-    <h5>With input and the percentage in the tooltip</h5>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="50"
-      [max]="250"
-      [isDisabled]="false"
-      [hasInputField]="true"
-      [hasPercent]="true"
-    ></elvia-slider>
-    <h5>With a predefined value</h5>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="1"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="true"
-      [value]="33"
-    ></elvia-slider>
-    <h5>Disabled</h5>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="true"
-      [hasInputField]="false"
-    ></elvia-slider>
-    <h5>Disabled with input</h5>
-    <elvia-slider
-      [type]="'simple'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="true"
-      [hasInputField]="true"
-    ></elvia-slider>
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem">
+      <elvia-slider [type]="'simple'" [min]="0" [max]="100"></elvia-slider>
+      <elvia-slider [type]="'simple'" [min]="1" [max]="10000000" [hasInputField]="true"></elvia-slider>
+      <elvia-slider
+        [type]="'simple'"
+        [min]="1"
+        [max]="10000000"
+        [hasInputField]="true"
+        [hasHintValues]="true"
+      ></elvia-slider>
+      <elvia-slider
+        [type]="'simple'"
+        [min]="0"
+        [max]="100"
+        [hasInputField]="true"
+        [unit]="' kr'"
+      ></elvia-slider>
+      <elvia-slider
+        [type]="'simple'"
+        [min]="0"
+        [max]="100"
+        [hasInputField]="true"
+        [unit]="' kWh'"
+        [label]="'Kilowattime'"
+      ></elvia-slider>
+      <elvia-slider
+        [type]="'simple'"
+        [min]="50"
+        [max]="250"
+        [hasInputField]="true"
+        [hasPercent]="true"
+      ></elvia-slider>
+      <elvia-slider [type]="'simple'" [min]="0" [max]="100" [isDisabled]="true"></elvia-slider>
+      <elvia-slider
+        [type]="'simple'"
+        [min]="0"
+        [max]="100"
+        [isDisabled]="true"
+        [hasInputField]="true"
+      ></elvia-slider>
+    </div>
 
     <h4>Range Slider</h4>
-    <elvia-slider
-      [type]="'range'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="false"
-    ></elvia-slider>
-    <elvia-slider
-      [type]="'range'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="false"
-      [hasHintValues]="true"
-    ></elvia-slider>
-    <h5>With input</h5>
-    <elvia-slider
-      [type]="'range'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="true"
-    ></elvia-slider>
-    <elvia-slider
-      [type]="'range'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="true"
-      [hasHintValues]="true"
-    ></elvia-slider>
-    <h5>With input, and custom label</h5>
-    <elvia-slider
-      [type]="'range'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="true"
-      [label]="{ left: 'Min', right: 'Maks' }"
-      [unit]="' kWh'"
-    ></elvia-slider>
-    <h5>With predefined values</h5>
-    <elvia-slider
-      [type]="'range'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="false"
-      [hasInputField]="true"
-      [value]="{ left: 33, right: 66 }"
-    ></elvia-slider>
-    <h5>Disabled</h5>
-    <elvia-slider
-      [type]="'range'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="true"
-      [hasInputField]="false"
-    ></elvia-slider>
-    <h5>Disabled with input</h5>
-    <elvia-slider
-      [type]="'range'"
-      [min]="0"
-      [max]="100"
-      [isDisabled]="true"
-      [hasInputField]="true"
-    ></elvia-slider>
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem">
+      <elvia-slider [type]="'range'" [min]="1" [max]="100"></elvia-slider>
+      <elvia-slider [type]="'range'" [min]="1" [max]="100" [hasHintValues]="true"></elvia-slider>
+      <elvia-slider
+        [type]="'range'"
+        [min]="0"
+        [max]="100"
+        [hasInputField]="true"
+        [hasHintValues]="true"
+      ></elvia-slider>
+      <elvia-slider
+        [type]="'range'"
+        [min]="1"
+        [max]="100"
+        [hasInputField]="true"
+        [label]="{ left: 'Min', right: 'Maks' }"
+        [unit]="' kWh'"
+      ></elvia-slider>
+      <elvia-slider [type]="'range'" [min]="0" [max]="100" [isDisabled]="true"></elvia-slider>
+      <elvia-slider
+        [type]="'range'"
+        [min]="0"
+        [max]="100"
+        [isDisabled]="true"
+        [hasInputField]="true"
+      ></elvia-slider>
+    </div>
   </div>
 
   <!--Spotlight-->
