fix(header): unsafe external links in docs

--- a/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
@@ -38,6 +38,7 @@
           . The toggle of the active class depends on your framework or routing library, but most modern
           routing libraries has an attribute for setting an active class on routes (see for example
           <a
+            rel="noopener"
             class="e-link e-link--inline"
             href="https://angular.io/api/router/RouterLinkActive"
             target="_blank"
@@ -46,6 +47,7 @@
           </a>
           for Angular or
           <a
+            rel="noopener"
             class="e-link e-link--inline"
             href="https://router.vuejs.org/api/interfaces/routerlinkprops.html#activeclass"
             target="_blank"
