fix(header): wrong link style for external links in docs

--- a/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
@@ -39,20 +39,22 @@
           routing libraries has an attribute for setting an active class on routes (see for example
           <a
             rel="noopener"
-            class="e-link e-link--inline"
+            class="e-link e-link--inline e-link--new-tab"
             href="https://angular.io/api/router/RouterLinkActive"
             target="_blank"
           >
-            routerLinkActive
+            <span class="e-link__title">routerLinkActive</span>
+            <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i></span>
           </a>
           for Angular or
           <a
             rel="noopener"
-            class="e-link e-link--inline"
+            class="e-link e-link--inline e-link--new-tab"
             href="https://router.vuejs.org/api/interfaces/routerlinkprops.html#activeclass"
             target="_blank"
           >
-            activeClass
+            <span class="e-link__title">activeClass</span>
+            <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i></span>
           </a>
           for Vue).
         </ng-container>
