add padding to compact inputs to prevent the label from overflowing

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -8353,6 +8353,7 @@ input:focus {
 }
 .e-form-field.e-form-field--compact .e-search--on-submit {
   font-size: 14px;
+  margin-top: -8px;
 }
 .e-form-field.e-form-field--compact .e-search--on-submit .e-input input,
 .e-form-field.e-form-field--compact .e-search--on-submit .e-input input:invalid,
