--- a/packages/elvis/src/components/form/search.scss
+++ b/packages/elvis/src/components/form/search.scss
@@ -139,6 +139,7 @@
     }
     .e-search--on-submit {
       font-size: 14px;
+      margin-top: -8px; //For hacky?
       .e-input {
         input,
         input:invalid,
