--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -100,6 +100,7 @@
     }
   }
 
+  //prevent label to not cover green border when focused
   &.e-form-field--compact:focus-within {
     .e-form-field__label {
       height: 10px;
