--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -8328,6 +8328,7 @@ input:focus {
 
 .e-form-field.e-form-field--compact .e-search--instant {
   font-size: 14px;
+  margin-top: -8px;
 }
 .e-form-field.e-form-field--compact .e-search--instant .e-input input,
 .e-form-field.e-form-field--compact .e-search--instant .e-input input:invalid,
