--- a/packages/web/src/app/shared/component-documentation/component-structure/component-subsection/component-subsection.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-subsection/component-subsection.component.html
@@ -6,7 +6,7 @@
     <span *ngIf="figmaOnly" class="e-ml-16 component-section__label">
       <label class="e-label e-label--orange">Figma only</label>
     </span>
-    <span *ngIf="sectionClass != ''" class="e-ml-16 component-section__class">
+    <span *ngIf="sectionClass !== ''" class="e-ml-16 component-section__class">
       <app-copy [message]="sectionClass">
         <ng-container ngProjectAs="copyContent">
           <span class="code-text">{{ sectionClass }}</span>
