--- a/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
@@ -28,7 +28,7 @@
           <ng-content select="headerDescription"></ng-content>
         </span>
       </div>
-      <div class="anchors e-mb-16" *ngIf="navbarAnchors.length != 0">
+      <div class="anchors e-mb-16" *ngIf="navbarAnchors.length !== 0">
         <div class="link" *ngFor="let anchor of navbarAnchors">
           <a
             (click)="scrollToElement(anchor)"
